2013-11-27  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (bootstrap-clean): No need to delete .elc,
	lisp/ rules will do that.

	* Makefile.in (extraclean): New.
	(bootstrap-clean): Move ja-dic deletion to extraclean.

	Move ja-dic, quail, leim-list.el to ../lisp/leim.
	* Makefile.in (leimdir): New variable.
	(TIT_GB, TIT_BIG5, MISC, changed.tit, changed.misc)
	(${leimdir}/leim-list.el, ${leimdir}/ja-dic/ja-dic.el):
	Generate in $leimdir.
	(all): Remove compilation, add ja-dic.
	(leim-list.el): Now PHONY.
	(setwins, compile-targets, compile-main, clean, mostlyclean)
	(extraclean): Remove.
	(bootstrap-clean): Delete all generated files.
	* README: Update for moved leim/ directory.
	* leim-ext.el (ucs-input-activate, hangul-input-method-activate):
	Remove manual autoloads; now in loaddefs.el.
	Disable byte-compile, version-control, autoloads in the output.
	* quail: Move to ../lisp/leim.

2013-11-23  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (RUN_EMACS): Empty EMACSLOADPATH rather than unsetting.

2013-11-04  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (RUN_EMACS): Don't set LC_ALL=C.  (Bug#15260)

2013-11-03  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (abs_srcdir): Remove.
	(RUN_EMACS): Unset EMACSLOADPATH.

2013-11-02  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (buildlisppath): Remove.
	(RUN_EMACS): Use abs_srcdir directly.

2013-10-24  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (.el.elc, changed.tit, changed.misc, leim-list.el)
	($(srcdir)/ja-dic/ja-dic.el, check-declare): Remove unnecessary
	path in -l argument (RUN_EMACS sets EMACSLOADPATH).

2013-10-23  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (abs_srcdir): New, set by configure.
	(buildlisppath): Use abs_srcdir.
	(RUN_EMACS, .el.elc, changed.tit, changed.misc, leim-list.el)
	($(srcdir)/ja-dic/ja-dic.el, setwins, distclean, check-declare):
	Quote entities that might contain whitespace.

2013-09-05  Jean Haidouk  <haidouk@yandex.com>  (tiny change)
