@@ -1,3 +1,9 @@
+2013-11-28  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (${leimdir}/leim-list.el):
+	* leim-ext.el: Change method for getting comments in the output
+	to one that does not fool lisp/compile-main's no-byte-compile test.
+
 2013-11-27  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (bootstrap-clean): No need to delete .elc,
